@@ -6,6 +6,7 @@ import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 
 public final class ElyHead {
@@ -14,7 +15,7 @@ public final class ElyHead {
     public static Image fromEly(String username, int size) {
         try {
             String url = "http://skinsystem.ely.by/skins/" + username +".png";
-            InputStream is = new URL(url).openStream();
+            InputStream is = URI.create(url).toURL().openStream();
             BufferedImage skin = ImageIO.read(is);
             is.close();
 
@@ -24,20 +25,17 @@ public final class ElyHead {
 
             BufferedImage hat = skin.getSubimage(40, 8, 8, 8);
 
-            // Итоговое изображение 8x8 с наложением
             BufferedImage result = new BufferedImage(8, 8, BufferedImage.TYPE_INT_ARGB);
             Graphics2D g = result.createGraphics();
             g.drawImage(head, 0, 0, null);
-            g.drawImage(hat, 0, 0, null); // альфа-канал сохранится
+            g.drawImage(hat, 0, 0, null);
             g.dispose();
 
-            // Масштабируем до нужного размера
             BufferedImage scaled = new BufferedImage(size, size, BufferedImage.TYPE_INT_ARGB);
             Graphics2D g2 = scaled.createGraphics();
             g2.drawImage(result, 0, 0, size, size, null);
             g2.dispose();
 
-            // Переводим в JavaFX Image
             return SwingFXUtils.toFXImage(scaled, null);
         } catch (Exception e) {
             return null;
